# CIFAR10-Pytorch

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  render.yaml  requirements.railway.torch.txt  requirements.railway.txt
src/: cnn.ipynb  model.pth
src/checkpoints/: best_baseline.pth
src/reports/: results.csv  results.json
webapp/: __init__.py  main.py
webapp/api/: routes.py
webapp/core/: __init__.py  config.py  constants.py
webapp/models/: __init__.py  cnn.py
webapp/schemas/: __init__.py  prediction.py
webapp/services/: __init__.py  model_registry.py  preprocess.py  reports.py
webapp/web/static/css/: styles.css
webapp/web/static/js/: app.js
webapp/web/templates/: index.html
